--- a/project.ipynb
+++ b/project.ipynb
@@ -65,6 +65,8 @@
     "\n",
     "https://www.kaggle.com/datasets/reihanenamdari/mental-health-corpus/data\n",
     "\n",
+    "1) Data cleaning and visualization\n",
+    "\n",
     "1) Build translation of english texts (using FlanT5 and M2M)\n",
     "\n",
     "- choose a easy translatable language (English -> Spanish) and then a hard one (English -> Farsi)\n",
