--- a/project.ipynb
+++ b/project.ipynb
@@ -114,7 +114,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,10 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/asad/Desktop/f2023-cornell/text-translation-and-bert/project.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/asad/Desktop/f2023-cornell/text-translation-and-bert/project.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Loading and observing dataset\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/asad/Desktop/f2023-cornell/text-translation-and-bert/project.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m mh_texts \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mdata/mental_health.csv\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading and observing dataset\n",
+    "\n",
+    "mh_texts = pd.read_csv(\"data/mental_health.csv\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
