--- a/project.ipynb
+++ b/project.ipynb
@@ -171,8 +171,8 @@
       ],
       "source": [
         "# Install packages that we need (Colab only)\n",
-        "!pip install sentencepiece\n",
-        "!pip install transformers"
+        "# !pip install sentencepiece\n",
+        "# !pip install transformers"
       ]
     },
     {
@@ -1078,10 +1078,7 @@
           ]
         }
       ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1679,8 +1676,7 @@
         }
       ],
       "source": [
-        "# Translate from French to English (to validate translation)\n",
-        "french_df_input = pd.read_csv(\"drive/MyDrive/french_texts\")"
+        "# Translate from French to English (to validate translation)\n"
       ]
     },
     {
@@ -1773,15 +1769,233 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "-SHfe3orT8fu"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "English translations\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>label</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>dear american teens question dutch person hear...</td>\n",
+              "      <td>no concern</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>nothing look forward lifei dont many reasons k...</td>\n",
+              "      <td>mental health concern</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>music recommendations im looking expand playli...</td>\n",
+              "      <td>no concern</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>im done trying feel betterthe reason im still ...</td>\n",
+              "      <td>mental health concern</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>worried  year old girl subject domestic physic...</td>\n",
+              "      <td>mental health concern</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                text                  label\n",
+              "0  dear american teens question dutch person hear...             no concern\n",
+              "1  nothing look forward lifei dont many reasons k...  mental health concern\n",
+              "2  music recommendations im looking expand playli...             no concern\n",
+              "3  im done trying feel betterthe reason im still ...  mental health concern\n",
+              "4  worried  year old girl subject domestic physic...  mental health concern"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "French translations\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Im fatigué regarder porno littéralement veut l...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>J'ai oublié de lire la langue maternelle des p...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>jamais atteint rock bottom jamais l'occasion d...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>chers lecteurs spatial odyssey kubrick bestalt...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Je vais me tuer RN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                text\n",
+              "0  Im fatigué regarder porno littéralement veut l...\n",
+              "1  J'ai oublié de lire la langue maternelle des p...\n",
+              "2  jamais atteint rock bottom jamais l'occasion d...\n",
+              "3  chers lecteurs spatial odyssey kubrick bestalt...\n",
+              "4                                 Je vais me tuer RN"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Chinese translations\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>im 累 观看 色情 字面上 想 女孩 说 想 想 想 想 想 想 想 想 想 想</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>假设忘记阅读乡村母语Yep假设正确Kingqueen meeeeeeeeeeeeeeeee</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>從未達到岩底 從未有機會 相遇 朋友 做 時 可能 被 他媽的 句子 上 im native...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>亲爱的读者 太空 Odyssey Kubrick Bestalthough 真的 Cant ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>金正恩将自杀</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                text\n",
+              "0          im 累 观看 色情 字面上 想 女孩 说 想 想 想 想 想 想 想 想 想 想\n",
+              "1      假设忘记阅读乡村母语Yep假设正确Kingqueen meeeeeeeeeeeeeeeee\n",
+              "2  從未達到岩底 從未有機會 相遇 朋友 做 時 可能 被 他媽的 句子 上 im native...\n",
+              "3  亲爱的读者 太空 Odyssey Kubrick Bestalthough 真的 Cant ...\n",
+              "4                                             金正恩将自杀"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#cached translation\n",
-        "\n",
-        "french_df_cache = pd.read_csv(\"cache/french_texts.csv\")"
+        "french_df_cache = pd.read_csv(\"cache/french_texts.csv\")\n",
+        "chinese_df_cache = pd.read_csv(\"cache/chinese_texts.csv\")\n",
+        "print(\"English translations\")\n",
+        "display(mh_texts.head())\n",
+        "print(\"French translations\")\n",
+        "display(french_df_cache.head())\n",
+        "print(\"Chinese translations\")\n",
+        "chinese_df_cache.head()"
       ]
     },
     {
